# qtlh-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gpu-tests.yml  release.yml
benchmarks/: README.md  benchmark_config.yaml  report_generator.py  run_benchmarks.py
examples/: genomic_analysis_example.ipynb
src/qtlh/: __init__.py
src/qtlh/hd/: __init__.py  encoder.py
src/qtlh/integration/: __init__.py  integrator.py
src/qtlh/language/: __init__.py  model.py
src/qtlh/quantum/: __init__.py  processor.py
src/qtlh/topology/: __init__.py  analyzer.py
src/qtlh/validation/: __init__.py  validator.py
tests/: conftest.py  test_pipeline.py
tests/data/: sample_sequences.fasta
tests/hd/: test_encoder.py
tests/integration/: test_integrator.py
tests/language/: test_model.py
tests/quantum/: test_processor.py
tests/topology/: test_analyzer.py
tests/validation/: test_validator.py
